Fix Play page not being rendered right on mobile

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -14,8 +14,7 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-$hamburger-cutoff: 900px;
-$hamburger-cutoff-plus-one: 901px;
+@import "../../global_styl/00_constants.css";
 
 header.NavBar {
     body.zen & {
